<resources>
    <string name="app_name">Book Recommender</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="recommendations">Recommendations</string>
    <string name="library">Library</string>
    <string name="buttonImportGoodreadsTxt">Import</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_register">Register</string>
    <string name="btn_main">Main</string>
    <string name="download">Download</string>
    <string name="picture_of_book">Picture of Book</string>
    <string name="libravox_download">LibraVox Download</string>
    <string name="book_description_title">Description</string>
</resources>
